fixed alignment subpage 2

--- a/ldsargumentum/styles/styles.css
+++ b/ldsargumentum/styles/styles.css
@@ -408,7 +408,7 @@ img.studyt {
 .title-cardq {
     display: grid;
     grid-template-columns: 1fr 1fr; 
-    grid-template-rows: 1fr 275px;
+    grid-template-rows: 1fr 275px 300px 275px;
     grid-gap: 50px;
     padding: 30px;
     margin-top: 180px;
@@ -422,11 +422,10 @@ img.studyt {
 }
 
 .questiont {
-    grid-column: 1/2;
-    grid-row: 1/2;
+    grid-column: 1/3;
+    grid-row: 3/4;
     height: 250px;
     margin: 0 auto;
-    margin-top: 215px;
     padding: 25px;
     background-color: #3D5A80;
     border-radius: 30px;
@@ -436,15 +435,17 @@ img.studyt {
     grid-column: 1/3;
     grid-row: 1/2;
     text-align: center;
+    margin: 0 auto;
     margin-top: 80px;
+    max-width: 1000px;
+    
 }
 
 .blockq {
-    grid-column: 2/3;
-    grid-row: 1/2;
+    grid-column: 1/3;
+    grid-row: 2/3;
     text-align: center;
     margin: 0 auto;
-    margin-top: 225px;
     width: 375px;
     background-color: white;
     padding: 15px;
@@ -454,17 +455,17 @@ img.studyt {
 
 .subtitle {
     font-size: .8rem;
-    grid-column: 2/3;
-    grid-row: 1/2;
+    grid-column: 1/3;
+    grid-row: 2/3;
     text-align: center;
     margin: 0 auto;
-    margin-top: 455px;
+    margin-top: 225px;
     width: 350px;
 }
 
 .qpara2 {
     grid-column: 1/3;
-    grid-row: 2/3;
+    grid-row: 4/5;
     text-align: center;
 }
 
